--- a/Active-Learning.ipynb
+++ b/Active-Learning.ipynb
@@ -13,7 +13,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import sklearn.datasets\n",
-    "from modAL.batch import uncertainty_batch_sampling\n",
     "from modAL.models import ActiveLearner\n",
     "from modAL.uncertainty import (entropy_sampling, margin_sampling,\n",
     "                               uncertainty_sampling)\n",
@@ -31,6 +30,14 @@
    "metadata": {},
    "source": [
     "# Training Curve Utils"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1db542f1-bd60-4a29-98bc-a633f671e19e",
+   "metadata": {},
+   "source": [
+    "## Random Sampling"
    ]
   },
   {
@@ -57,6 +64,14 @@
     "        scores.append(accuracy_score(y_valid, model.predict(X_valid)))\n",
     "\n",
     "    return scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0017d84d-14d8-4138-b4ad-bace99d67bc4",
+   "metadata": {},
+   "source": [
+    "## Sampling with Active Learning"
    ]
   },
   {
